kubernetes/apps/media/vpn/app/terminal.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terminal
  labels:
    app: terminal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terminal
  template:
    metadata:
      labels:
        app: terminal
    spec:
      containers:
        - name: alpine
          image: alpine@sha256:69665d02cb32192e52e07644d76bc6f25abeb5410edc1c7a81a10ba3f0efb90a
          command:
            - /bin/sh
            - -c
            - while true; do
              sleep 600 &
              wait $!;
              done
